Update course titles and images in index.html, replacing outdated content with new assets for improved relevance. Add new images for AI, Business Analytics, and Finance programs.

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <div class="green-border"></div>
               <div class="overlay-card">
                 <div class="card-icon">📖</div>
-                <h3 class="card-title">40+ Years of History</h3>
+                <h3 class="card-title">30+ Years of Legacy</h3>
                 <p class="card-description">
                   Netus amet congue justo luctus auctor erat dapibus nam sodales
                   ridiculus duis.
@@ -305,7 +305,7 @@
           <div class="course-card">
             <div class="course-image">
               <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                src="/images/programs/finance.jpg"
                 alt="PGDM Financial Management"
               />
             </div>
@@ -316,7 +316,7 @@
           <div class="course-card">
             <div class="course-image">
               <img
-                src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                src="/images/programs/business-analytics.jpg"
                 alt="PGDM Research & Business Analytics"
               />
             </div>
@@ -327,7 +327,7 @@
           <div class="course-card">
             <div class="course-image">
               <img
-                src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                src="/images/programs/AI.jpg"
                 alt="PGDM Artificial Intelligence & Data Science"
               />
             </div>
@@ -349,22 +349,22 @@
     <section class="university-partners">
       <h2 style="color: #000">Placement & Recruiters</h2>
       <!-- Stats Banner Section -->
-    <div class="stats-banner">
-      <div class="stats-container container">
-        <div class="stat-item">
-          <p class="stat-number">20.00 LPA</p>
-          <p class="stat-text">Highest Salary</p>
-        </div>
-        <div class="stat-item">
-          <p class="stat-number">12.25 LPA</p>
-          <p class="stat-text">Average Salary</p>
-        </div>
-        <div class="stat-item">
-          <p class="stat-number">148</p>
-          <p class="stat-text">Total Recruiters</p>
+      <div class="stats-banner">
+        <div class="stats-container container">
+          <div class="stat-item">
+            <p class="stat-number">20.00 LPA</p>
+            <p class="stat-text">Highest Salary</p>
+          </div>
+          <div class="stat-item">
+            <p class="stat-number">12.25 LPA</p>
+            <p class="stat-text">Average Salary</p>
+          </div>
+          <div class="stat-item">
+            <p class="stat-number">148</p>
+            <p class="stat-text">Total Recruiters</p>
+          </div>
         </div>
       </div>
-    </div>
       <div class="university-partners-container">
         <div class="university-grid">
           <div class="university-logo">
