--- a/index.html
+++ b/index.html
@@ -352,16 +352,25 @@
       <div class="stats-banner">
         <div class="stats-container container">
           <div class="stat-item">
-            <p class="stat-number">20.00 LPA</p>
-            <p class="stat-text">Highest Salary</p>
+            <div class="stat-icon">🏆</div>
+            <div class="stat-content">
+              <p class="stat-number">20.00 LPA</p>
+              <p class="stat-text">Highest Salary</p>
+            </div>
           </div>
           <div class="stat-item">
-            <p class="stat-number">12.25 LPA</p>
-            <p class="stat-text">Average Salary</p>
+            <div class="stat-icon">💵</div>
+            <div class="stat-content">
+              <p class="stat-number">12.25 LPA</p>
+              <p class="stat-text">Average Salary</p>
+            </div>
           </div>
           <div class="stat-item">
-            <p class="stat-number">148</p>
-            <p class="stat-text">Total Recruiters</p>
+            <div class="stat-icon">🏢</div>
+            <div class="stat-content">
+              <p class="stat-number">148</p>
+              <p class="stat-text">Total Recruiters</p>
+            </div>
           </div>
         </div>
       </div>
