--- a/index.html
+++ b/index.html
@@ -8,15 +8,44 @@
     <style>
       /* LBSIM Rankings & Accolades Section */
       .accolades-section {
-        background-color: #324fbb;
+        /* opacity: 0.8; */
+
         padding: 80px 0;
+        background-image: url("images/LBSIM\ Campus.webp");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+        position: relative;
       }
       .accolades-container {
         max-width: 1200px;
         margin: 0 auto;
         padding: 0 20px;
+        position: relative;
+        z-index: 2;
       }
+
+      .accolades-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #0f33b4;
+        opacity: 0.9;
+        /* z-index: 1; */
+      }
+
+      .accolades-container h2 {
+        text-align: center;
+        font-size: 48px;
+        font-weight: bold;
+        color: #fff;
+        margin-bottom: 50px;
+
+      }
+
       .accolades-grid {
         display: grid;
         grid-template-columns: 1fr repeat(5, 1.5fr);
@@ -106,6 +135,10 @@
 
         .accolade-rank {
           transform: translateY(-20px);
+        }
+
+        .accolades-container h2 {
+          font-size: 32px !important;
         }
       }
     </style>
@@ -418,7 +451,9 @@
 
     <!-- LBSIM Rankings & Accolades -->
     <section class="accolades-section">
+      <div class="accolades-overlay"></div>
       <div class="accolades-container">
+        <h2>LBSIM Rankings & Accolades</h2>
         <div class="accolades-grid">
           <!-- Header Row -->
           <div class="accolade-header"></div>
