Implement Alumni Slider functionality in index.html and script.js, enhancing the alumni section with a responsive slider layout and navigation controls. Update styles in style.css for improved visual presentation and interactivity.

--- a/index.html
+++ b/index.html
@@ -516,9 +516,11 @@
     <section class="alumni-section">
       <div class="alumni-container">
         <h2>Our Distinguished Alumni</h2>
-        <div class="alumni-grid">
+        <div class="alumni-slider-wrapper">
+          <div class="alumni-slider-container">
+            <div class="alumni-grid alumni-slider">
           <!-- Alumni Card 1 -->
-          <!-- <div class="alumni-card">
+          <div class="alumni-card">
             <div class="alumni-image-wrapper">
               <img
                 src="/images/alumni/vrinda-jain.jpg"
@@ -570,9 +572,9 @@
                 </span>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- Alumni Card 1 -->
-          <!-- <div class="alumni-card">
+          <div class="alumni-card">
             <div class="alumni-image-wrapper">
               <img
                 src="/images/alumni/anshika-singh.jpg"
@@ -624,7 +626,7 @@
                 </span>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- Alumni Card 1 -->
           <div class="alumni-card">
             <div class="alumni-image-wrapper">
@@ -842,14 +844,21 @@
                   </svg>
                   <span class="alumni-batch">Batch PGDM GEN (2022-24)</span>
                 </span>
-              </div>
+               </div>
+             </div>
+           </div>
             </div>
           </div>
+          <div class="alumni-slider-controls">
+            <button class="alumni-prev-btn" aria-label="Previous Alumni">&lt;</button>
+            <div class="alumni-slider-indicators"></div>
+            <button class="alumni-next-btn" aria-label="Next Alumni">&gt;</button>
+          </div>
         </div>
-      </div>
-    </section>
+       </div>
+     </section>
 
-    <!-- Internal Immersions -->
+     <!-- Internal Immersions -->
     <!-- <section class="immersions-section">
       <div class="immersions-container container">
         <h2>Internal Immersions</h2>
