--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="content-wrapper">
           <!-- Left Column: Text Content -->
           <div class="text-content">
-            <div class="subtitle">WHO WE ARE</div>
+            <!-- <div class="subtitle">WHO WE ARE</div> -->
             <h2 class="main-title">
               Lal Bahadur Shastri Institute of Management (LBSIM)
             </h2>
@@ -307,10 +307,10 @@
               <div class="overlay-card">
                 <div class="card-icon">📖</div>
                 <h3 class="card-title">30+ Years of Legacy</h3>
-                <p class="card-description">
+                <!-- <p class="card-description">
                   Netus amet congue justo luctus auctor erat dapibus nam sodales
                   ridiculus duis.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
