Update index.html to reflect new program title and enhance style.css with .stat-icon font size for improved visual consistency.

--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
     <!-- Courses Section -->
     <section class="courses-section">
       <div class="courses-container container">
-        <h2 style="color: #000">Select Your Program</h2>
+        <h2 style="color: #000">Two year full time PGDM Program <br> at LBSIM
+          Specialisation</h2>
         <div class="courses-grid">
           <!-- Course 1: PGDM General -->
           <div class="course-card">
