Implement Hero Banner Section in index.html and add corresponding styles in style.css for improved visual presentation and responsiveness.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,14 @@
     </style>
   </head>
   <body>
-    <!-- Banner Section -->
+    <!-- Hero Banner Section -->
+<section class="hero-section">
+  <picture>
+    <source media="(min-width: 768px)" srcset="images/lbsim-banner.webp">
+    <source media="(max-width: 767px)" srcset="images/lbsim-banner-sm1.webp">
+    <img src="images/lbsim-banner.webp" alt="LBSIM Banner" class="banner-img">
+  </picture>
+</section>
 
     <!-- Accreditations & Memberships Section -->
     <section class="accreditations-section container">
