Refactor Hero Section in index.html and introduce 'Who We Are' section with updated content and layout for enhanced user engagement and visual appeal. Add new images for improved presentation.

--- a/index.html
+++ b/index.html
@@ -144,13 +144,66 @@
   </head>
   <body>
     <!-- Hero Banner Section -->
-<section class="hero-section">
-  <picture>
-    <source media="(min-width: 768px)" srcset="images/lbsim-banner.webp">
-    <source media="(max-width: 767px)" srcset="images/lbsim-banner-sm1.webp">
-    <img src="images/lbsim-banner.webp" alt="LBSIM Banner" class="banner-img">
-  </picture>
-</section>
+    <section class="hero-section">
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/lbsim-banner.webp" />
+        <source
+          media="(max-width: 767px)"
+          srcset="images/lbsim-banner-sm1.webp"
+        />
+        <img
+          src="images/lbsim-banner.webp"
+          alt="LBSIM Banner"
+          class="banner-img"
+        />
+      </picture>
+    </section>
+
+    <!-- WHO WE ARE Section -->
+    <section class="who-we-are">
+      <div class="who-we-are-container">
+        <div class="content-wrapper">
+          <!-- Left Column: Text Content -->
+          <div class="text-content">
+            <!-- <div class="subtitle">WHO WE ARE</div> -->
+            <h2 class="main-title">
+              Lal Bahadur Shastri Institute of Management (LBSIM)
+            </h2>
+            <p class="description">
+              Delhi is among India’s <b>premium private business schools</b>.
+              <b>LBSIM</b> was established in <b>1995</b> to perpetuate the
+              vision and values of
+              <b>Bharat Ratna Shri Lal Bahadur Shastri Ji</b> – India’s
+              <b>2nd Prime Minister</b>, by his son -
+              <b>Shri Anil Shastri ji</b>, former Union Minister and Chairman,
+              Board of Governors. LBSIM is powered by <b>55+ PhD Faculty</b>,
+              <b>6000+ Alumni</b> and <b>100+ Corporates</b>.
+            </p>
+            <button class="cta-button">DISCOVER MORE</button>
+          </div>
+
+          <!-- Right Column: Image with Overlay Card -->
+          <div class="image-content">
+            <div class="image-wrapper">
+              <img
+                src="/images/LBSIM Campus.webp"
+                alt="University Campus"
+                class="campus-image"
+              />
+              <div class="green-border"></div>
+              <div class="overlay-card">
+                <div class="card-icon">📖</div>
+                <h3 class="card-title">30+ Years of Legacy</h3>
+                <!-- <p class="card-description">
+                  Netus amet congue justo luctus auctor erat dapibus nam sodales
+                  ridiculus duis.
+                </p> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Accreditations & Memberships Section -->
     <section class="accreditations-section container">
@@ -281,57 +334,13 @@
       </div>
     </section>
 
-    <!-- WHO WE ARE Section -->
-    <section class="who-we-are">
-      <div class="who-we-are-container">
-        <div class="content-wrapper">
-          <!-- Left Column: Text Content -->
-          <div class="text-content">
-            <!-- <div class="subtitle">WHO WE ARE</div> -->
-            <h2 class="main-title">
-              Lal Bahadur Shastri Institute of Management (LBSIM)
-            </h2>
-            <p class="description">
-              Delhi is among India’s <b>premium private business schools</b>.
-              <b>LBSIM</b> was established in <b>1995</b> to perpetuate the
-              vision and values of
-              <b>Bharat Ratna Shri Lal Bahadur Shastri Ji</b> – India’s
-              <b>2nd Prime Minister</b>, by his son -
-              <b>Shri Anil Shastri ji</b>, former Union Minister and Chairman,
-              Board of Governors. LBSIM is powered by <b>55+ PhD Faculty</b>,
-              <b>6000+ Alumni</b> and <b>100+ Corporates</b>.
-            </p>
-            <button class="cta-button">DISCOVER MORE</button>
-          </div>
-
-          <!-- Right Column: Image with Overlay Card -->
-          <div class="image-content">
-            <div class="image-wrapper">
-              <img
-                src="/images/LBSIM Campus.webp"
-                alt="University Campus"
-                class="campus-image"
-              />
-              <div class="green-border"></div>
-              <div class="overlay-card">
-                <div class="card-icon">📖</div>
-                <h3 class="card-title">30+ Years of Legacy</h3>
-                <!-- <p class="card-description">
-                  Netus amet congue justo luctus auctor erat dapibus nam sodales
-                  ridiculus duis.
-                </p> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- Courses Section -->
     <section class="courses-section">
       <div class="courses-container container">
-        <h2 style="color: #000">Two year full time PGDM Program <br> at LBSIM
-          Specialisation</h2>
+        <h2 style="color: #000">
+          Two year full time PGDM Program <br />
+          at LBSIM Specialisation
+        </h2>
         <div class="courses-grid">
           <!-- Course 1: PGDM General -->
           <div class="course-card">
@@ -425,7 +434,17 @@
         </div>
       </div>
 
-      <h3 style="text-align: center; font-size: 24px; font-weight: bold; color: #000; margin-bottom: 20px;">Prominent Recruiters</h3>
+      <h3
+        style="
+          text-align: center;
+          font-size: 24px;
+          font-weight: bold;
+          color: #000;
+          margin-bottom: 20px;
+        "
+      >
+        Prominent Recruiters
+      </h3>
 
       <div class="university-partners-container">
         <div class="university-grid">
