Refactor accolades section in index.html to improve layout and presentation. Update font sizes and opacity for better visual hierarchy. Adjust styles in style.css for consistency across headings and course labels.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+        font-family: "Helvetica Neue", Arial, sans-serif;
         position: relative;
       }
       .accolades-container {
@@ -33,13 +33,13 @@
         width: 100%;
         height: 100%;
         background-color: #0f33b4;
-        opacity: 0.9;
+        opacity: 0.85;
         /* z-index: 1; */
       }
 
       .accolades-container h2 {
         text-align: center;
-        font-size: 48px;
+        font-size: 40px;
         font-weight: bold;
         color: #fff;
         margin-bottom: 50px;
@@ -50,17 +50,17 @@
         grid-template-columns: 1fr repeat(5, 1.5fr);
         align-items: center;
         text-align: center;
-        gap: 40px 20px;
+        gap: 60px 20px;
         color: #f7b500;
       }
       .accolade-header {
-        font-weight: 600;
-        font-size: 15px;
+        font-weight: 700;
+        font-size: 28px;
         letter-spacing: 0.5px;
       }
       .accolade-region {
         font-weight: 700;
-        font-size: 26px;
+        font-size: 40px;
         text-align: left;
         line-height: 1.2;
       }
@@ -179,7 +179,7 @@
               Board of Governors. LBSIM is powered by <b>55+ PhD Faculty</b>,
               <b>6000+ Alumni</b> and <b>100+ Corporates</b>.
             </p>
-            <button class="cta-button">DISCOVER MORE</button>
+            <!-- <button class="cta-button">DISCOVER MORE</button> -->
           </div>
 
           <!-- Right Column: Image with Overlay Card -->
@@ -205,6 +205,69 @@
       </div>
     </section>
 
+    <!-- LBSIM Rankings & Accolades -->
+    <section class="accolades-section">
+      <div class="accolades-overlay"></div>
+      <div class="accolades-container">
+        <h2>LBSIM Rankings & Accolades</h2>
+        <div class="accolades-grid">
+          <!-- Header Row -->
+          <div class="accolade-header"></div>
+          <div class="accolade-header">THE TIMES OF INDIA</div>
+          <div class="accolade-header">FORTUNE INDIA</div>
+          <div class="accolade-header">OUTLOOK</div>
+          <div class="accolade-header">THE WEEK</div>
+          <div class="accolade-header">BUSINESS TODAY</div>
+
+          <!-- Delhi NCR Row -->
+          <div class="accolade-region">Delhi NCR</div>
+          <div class="accolade-card" data-publication="THE TIMES OF INDIA">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">3<sup>rd</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="FORTUNE INDIA">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">5<sup>th</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="OUTLOOK">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">3<sup>rd</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="THE WEEK">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">4<sup>th</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="BUSINESS TODAY">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">7<sup>th</sup></div>
+          </div>
+
+          <!-- All India Row -->
+          <div class="accolade-region">All India</div>
+          <div class="accolade-card" data-publication="THE TIMES OF INDIA">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">3<sup>rd</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="FORTUNE INDIA">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">13<sup>th</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="OUTLOOK">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">14<sup>th</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="THE WEEK">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">15<sup>th</sup></div>
+          </div>
+          <div class="accolade-card" data-publication="BUSINESS TODAY">
+            <img src="images/award.png" alt="Award" class="award-image" />
+            <div class="accolade-rank">18<sup>th</sup></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Courses Section -->
     <section class="courses-section">
       <div class="courses-container container">
@@ -215,45 +278,45 @@
         <div class="courses-grid">
           <!-- Course 1: PGDM General -->
           <div class="course-card">
-            <div class="course-image">
+            <!-- <div class="course-image">
               <img
                 src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
                 alt="PGDM General Management"
               />
-            </div>
+            </div> -->
             <div class="course-label">PGDM General</div>
           </div>
 
           <!-- Course 2: PGDM Financial Management -->
           <div class="course-card">
-            <div class="course-image">
+            <!-- <div class="course-image">
               <img
                 src="/images/programs/finance.jpg"
                 alt="PGDM Financial Management"
               />
-            </div>
+            </div> -->
             <div class="course-label">PGDM Financial Management</div>
           </div>
 
           <!-- Course 3: PGDM Research & Business Analytics -->
           <div class="course-card">
-            <div class="course-image">
+            <!-- <div class="course-image">
               <img
                 src="/images/programs/business-analytics.jpg"
                 alt="PGDM Research & Business Analytics"
               />
-            </div>
+            </div> -->
             <div class="course-label">PGDM Research & Business Analytics</div>
           </div>
 
           <!-- Course 4: PGDM Artificial Intelligence & Data Science -->
           <div class="course-card">
-            <div class="course-image">
+            <!-- <div class="course-image">
               <img
                 src="/images/programs/AI.jpg"
                 alt="PGDM Artificial Intelligence & Data Science"
               />
-            </div>
+            </div> -->
             <div class="course-label">
               PGDM Artificial Intelligence & Data Science
             </div>
@@ -354,69 +417,6 @@
           </div>
           <div class="university-logo">
             <img src="images/placements/12.jpg" alt="12" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- LBSIM Rankings & Accolades -->
-    <section class="accolades-section">
-      <div class="accolades-overlay"></div>
-      <div class="accolades-container">
-        <h2>LBSIM Rankings & Accolades</h2>
-        <div class="accolades-grid">
-          <!-- Header Row -->
-          <div class="accolade-header"></div>
-          <div class="accolade-header">THE TIMES OF INDIA</div>
-          <div class="accolade-header">FORTUNE INDIA</div>
-          <div class="accolade-header">OUTLOOK</div>
-          <div class="accolade-header">THE WEEK</div>
-          <div class="accolade-header">BUSINESS TODAY</div>
-
-          <!-- Delhi NCR Row -->
-          <div class="accolade-region">Delhi NCR</div>
-          <div class="accolade-card" data-publication="THE TIMES OF INDIA">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">3<sup>rd</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="FORTUNE INDIA">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">5<sup>th</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="OUTLOOK">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">3<sup>rd</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="THE WEEK">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">4<sup>th</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="BUSINESS TODAY">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">7<sup>th</sup></div>
-          </div>
-
-          <!-- All India Row -->
-          <div class="accolade-region">All India</div>
-          <div class="accolade-card" data-publication="THE TIMES OF INDIA">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">3<sup>rd</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="FORTUNE INDIA">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">13<sup>th</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="OUTLOOK">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">14<sup>th</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="THE WEEK">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">15<sup>th</sup></div>
-          </div>
-          <div class="accolade-card" data-publication="BUSINESS TODAY">
-            <img src="images/award.png" alt="Award" class="award-image" />
-            <div class="accolade-rank">18<sup>th</sup></div>
           </div>
         </div>
       </div>
