Update step titles in index.html for clarity and consistency; adjust step icon dimensions in style.css for better responsiveness. Replace outdated images in the process section to enhance visual content.

--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                 alt="Apply Online Icon"
               />
             </div>
-            <h3 class="step-title">Apply Online</h3>
+            <h3 class="step-title">Register Yourself</h3>
             <!-- <p class="step-description">
               Fill out the common application form for IMT Ghaziabad, Nagpur,
               and Hyderabad. Application fee:
@@ -771,7 +771,7 @@
                 alt="Profile Detail Form Icon"
               />
             </div>
-            <h3 class="step-title">Complete Profile Detail Form</h3>
+            <h3 class="step-title">Verify Mobile</h3>
             <!-- <p class="step-description">
               Upload all required supporting documents in the Profile Detail
               form to complete your application.
@@ -789,7 +789,7 @@
                 alt="Submit Test Scores Icon"
               />
             </div>
-            <h3 class="step-title">Submit Test Scores</h3>
+            <h3 class="step-title">Fill Application Online</h3>
             <!-- <p class="step-description">
               Provide valid <strong>CAT / XAT / GMAT / CMAT*</strong> scores as
               applicable.
@@ -809,7 +809,7 @@
                 alt="Selection Process Icon"
               />
             </div>
-            <h3 class="step-title">Attend the Selection Process</h3>
+            <h3 class="step-title">Pay Application Fee</h3>
             <!-- <p class="step-description">
               Shortlisted candidates will be invited for the offline common
               selection process.
@@ -827,7 +827,7 @@
                 alt="Check Final Results Icon"
               />
             </div>
-            <h3 class="step-title">Check Final Results</h3>
+            <h3 class="step-title">Upload Docs & Exam Score</h3>
             <!-- <p class="step-description">
               Admission offers will be announced after the evaluation process is
               completed.
